# it-leti-2024-patterns-demo

./: .clang-format  CMakeLists.txt  Dockerfile  README.md  conanfile.txt
src/: CMakeLists.txt  main.cpp
src/config/: ConfigDIBase.h  ConfigDataBase.h  ConfigLoadTraits.h  FileConfigReaderBase.h  IConfigReader.h  IFileConfigReader.h
src/config/ConfigDI/: ConfigDI.cpp  ConfigDI.h  ConfigData.cpp  ConfigData.h  JsonConfigReader.cpp  JsonConfigReader.h  defaults.h
src/config/GeneralConfig/: GeneralConfigDI.cpp  GeneralConfigDI.h  GeneralConfigData.cpp  GeneralConfigData.h  GeneralJsonConfigReader.cpp  GeneralJsonConfigReader.h
src/config/LogsConfig/: LogsConfigDI.cpp  LogsConfigDI.h  LogsConfigData.cpp  LogsConfigData.h  LogsJsonConfigReader.cpp  LogsJsonConfigReader.h
src/utils/: InitLogs.cpp  InitLogs.h  singleton.h
src/utils/Logs/: LogsMacro.h  LogsManager.cpp  LogsManager.h  LogsSettings.h
src/utils/macro/: interface.h  ptrable.h
